kubernetes/django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-app
spec:
  selector:
    app: django-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
