kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: django-app
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
